fix image gap with div

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
     .hide-portrait {
       display: none !important;
     }
+    .square-portrait {
+      width: 100vw;
+      height: 100vw;
+    }
   }
 
 @theme {
